# anvil

./: .gitignore  Cargo.toml  README.md  TODO.md  __init__.py  anvil.ps1  anvil.toml  check_deps.sh  pyproject.toml  requirements.txt  run.bat  run.sh
assets/: ignite.cfg
assets/initramfs/system/core/: init
assets/initramfs/system/manifests/: services.toml
assets/initramfs/system/services/: console  vfs
docs/: COMMANDS.md
recipes/: desktop.toml  minimal.toml  server.toml
src/: .gitignore  __init__.py  __main__.py  cli.py  main.py  main.rs  temp_inspect.py  tui.py
src/analysis/: __init__.py  binary_inspector.py  detector.py  diagnostics.py  exception_detector.py  inspector.py  log_parser.py  parser.py  patterns.py
src/assets/: .gitignore
src/assets/initramfs/system/core/: init
src/assets/initramfs/system/manifests/: services.toml
src/assets/initramfs/system/services/: console  firefly  input  shell  supervisor  terminal
src/commands/: build.rs  check.rs  clean.rs  clippy.rs  dist.rs  doc.rs  env.rs  fmt.rs  iso.rs  mod.rs  recipe.rs  run.rs  template.rs  usb.rs
src/core/: __init__.py  builder.rs  config.py  config.rs  context.py  errors.py  exceptions.py  logger.py  mod.rs  paths.py  recipe.rs  template.rs  utils.rs
src/runner/: __init__.py  monitor.py  qemu.py  serial.py  streams.py  wsl.py
src/tui/: __init__.py  app.py  widgets.py
templates/driver/: README.md
