[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anvil"
version = "4.0.0"
description = "Build, run and diagnostic tool for RedstoneOS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "RedstoneOS Team" }]
keywords = ["os", "kernel", "build-system", "diagnostic"]

dependencies = [
    "rich>=13.0",
    "typer>=0.9",
    "watchdog>=3.0",
    "aiofiles>=23.0",
    "toml>=0.10",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1"]

[project.scripts]
anvil = "anvil.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/anvil"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
