[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anvil"
version = "0.0.5"
description = "Build, run and diagnostic tool for RedstoneOS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "RedstoneOS Team" }]

dependencies = [
    "rich>=13.0",
    "typer>=0.9",
    "watchdog>=3.0",
    "aiofiles>=23.0",
    "toml>=0.10",
    "pydantic>=2.0",
    "textual>=0.41.0",
]

[project.scripts]
anvil = "cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
